--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -1,13 +1,13 @@
-@import 'locationview/CoordinateControl';
-@import 'locationview/GeocodeControl';
-@import 'locationview/GeolocationControl';
-@import 'locationview/LeafletControls';
-@import 'locationview/LocationControl';
-@import 'locationview/LocationView';
-@import 'locationview/PointControl';
+@import 'locationview/CoordinateControl.scss';
+@import 'locationview/GeocodeControl.scss';
+@import 'locationview/GeolocationControl.scss';
+@import 'locationview/LeafletControls.scss';
+@import 'locationview/LocationControl.scss';
+@import 'locationview/LocationView.scss';
+@import 'locationview/PointControl.scss';
 
-@import 'questionview/QuestionView';
-@import 'mvc/ModalView';
+@import 'questionview/QuestionView.scss';
+@import 'mvc/ModalView.scss';
 
 .dyfiIframe {
   border: 1px solid #ddd;
