--- a/src/htdocs/css/_downloads.scss
+++ b/src/htdocs/css/_downloads.scss
@@ -1,4 +1,5 @@
-dl.page-download {
+/* dl */
+.page-download {
   border-top: 1px solid #f0f0f0;
   margin: 1em 0;
 
@@ -6,23 +7,25 @@ dl.page-download {
     border: none;
   }
 
-  > dt.product {
+  /* dt */
+  > .product {
     > .type {
       font-weight: bold;
     }
   }
 
-  > dd.file {
-    margin: 1em 0 0;
+  /** dd */
+  > .file {
     font-size: 0.8125em;
-
-    > .title {
-      display:block;
-      font-weight: bold;
-    }
+    margin: 1em 0 0;
 
     > .caption {
       color: #666;
+    }
+
+    > .title {
+      display: block;
+      font-weight: bold;
     }
   }
 }
