--- a/src/htdocs/modules/base/_SummaryPage.scss
+++ b/src/htdocs/modules/base/_SummaryPage.scss
@@ -1,44 +1,44 @@
 /*** summary section styles ***/
 .summary {
-  position:relative;
+  border: 1px solid #e5e5e5;
   display: block;
   margin: 1em 0 0;
   padding: 1em 0.5em;
-  border: 1px solid #e5e5e5;
+  position: relative;
 
   &:hover {
-    background:rgba(48, 106, 194, 0.05);
+    background: rgba(48, 106, 194, 0.05);
   }
 
   > ul {
-    list-style: none;
-    margin:0;
-    padding:0;
     line-height: 3em;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
     > li {
       display: inline-block;
-      vertical-align: middle;
-      text-align: center;
-      max-width: 150px;
       line-height: 1em;
+      max-width: 150px;
+      text-align: center;
+      vertical-align: middle;
 
       &.image > img {
-        width: 4em;
         padding: 0 0.5em;
+        width: 4em;
       }
 
       &.summary-hide {
-        display:none;
-      }
-
-      > span {
-        display:block;
+        display: none;
       }
 
       > abbr {
-        font-size: 0.6875em;
         color: #999;
+        font-size: 0.6875em;
+      }
+
+      > span {
+        display: block;
       }
     }
   }
@@ -54,38 +54,39 @@ a.summary,
 a.summary:visited,
 a.summary:active,
 a.summary:hover {
-  text-decoration:none;
-  color:#444;
+  color: #444;
+  text-decoration: none;
 }
 
-.summary.preferred:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '\2713'; /* checkmark */
-  color: #fff;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
-  z-index:3;
-  width:1.4em;
-  line-height:1.4em;
-  font-size:0.875em;
-  text-align: center;
-}
+.summary.preferred {
+  &:before {
+    color: #fff;
+    content: '\2713'; /* checkmark */
+    font-size: 0.875em;
+    left: 0;
+    line-height: 1.4em;
+    position: absolute;
+    text-align: center;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+    top: 0;
+    width: 1.4em;
+    z-index: 3;
+  }
 
-.summary.preferred:after {
-  content: '';
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  width: 0;
-  height: 0;
-  border-right: 2em solid transparent;
-  border-top: 2em solid #49a34b;
-  z-index:2;
+  &:after {
+    border-right: 2em solid transparent;
+    border-top: 2em solid #49a34b;
+    content: '';
+    height: 0;
+    left: -1px;
+    position: absolute;
+    top: -1px;
+    width: 0;
+    z-index:2;
+  }
 }
 
 @media screen and (min-width:560px) {
-
   .summary > ul {
     line-height: 3.5em;
 
@@ -93,12 +94,8 @@ a.summary:hover {
       font-size:1.125em;
       width: 16.6%;
 
-      &.image > img {
-        /*width:3em; */
-      }
-
       &.summary-hide {
-        display:inline-block;
+        display: inline-block;
       }
     }
   }
