--- a/src/htdocs/modules/impact/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/_DYFIPage.scss
@@ -1,12 +1,10 @@
-@import 'mvc/ModalView.scss';
-@import 'mvc/DownloadView.scss';
 
 .dyfi-tablist > section {
   padding-top: 1em;
 }
 
 .dyfi-summary > ul > li {
-  width:25%;
+  width: 25%;
 }
 
 .dyfi-responses {
@@ -19,44 +17,45 @@
     > tbody > tr {
 
       > .location {
-        line-height: 1.2;
-
         > small {
-          display:block;
-          color:#999;
+          color: #999;
+          display: block;
         }
       }
 
       > th {
-        font-weight:normal;
-        background:none;
+        background: none;
+        font-weight: normal;
       }
 
-      > td, > th {
-        display:none;
+      > td,
+      > th {
+        display: none;
       }
 
-      /* Show only first 10 rows by default */
-      @for $i from 1 through 10 {
-        &:nth-child(#{$i}) > td, &:nth-child(#{$i}) > th {
-          display:table-cell;
+      /* show only first 10 rows by default */
+      &:nth-child(-n + 10) {
+        > td,
+        > th {
+          display: table-cell;
         }
       }
     }
 
     .mmi > span {
-      display:block;
-      padding:10px 0;
-      text-align:center;
-      border-radius:2px;
-      text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
+      border-radius: 2px;
+      display: block;
+      padding: 10px 0;
+      text-align: center;
+      text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
       width: 3em;
     }
   }
 
   .full-list > .dyfi > tbody > tr {
-    td, th {
-      display:table-cell;
+    > td,
+    > th {
+      display: table-cell;
     }
   }
 }
@@ -66,35 +65,12 @@
   .dyfi-responses {
 
     .dyfi {
-      /*** Label the data ***/
-      td:nth-of-type(1):before { content:"MMI"; }
-      td:nth-of-type(2):before { content:"Responses"; }
-      td:nth-of-type(3):before { content:"Distance"; }
-
-      > tbody > tr {
-
-        > td, > th {
-          display:none;
-        }
-
-        @for $i from 1 through 10 {
-          &:nth-child(#{$i}) > td, &:nth-child(#{$i}) > th {
-            display:block;
-          }
-        }
-      }
-
       .mmi > span {
-        width:2em;
-        padding:0;
+        padding: 0;
+        width: 2em;
       }
     }
 
-    .full-list > .dyfi > tbody > tr {
-      td, th {
-        display:block;
-      }
-    }
   }
 }
 
@@ -103,6 +79,6 @@
 @media screen and (min-width: 560px) {
 
   .dyfi-summary > ul > li {
-    width:20%;
+    width: 20%;
   }
 }
