--- a/src/htdocs/modules/impact/_PagerPage.scss
+++ b/src/htdocs/modules/impact/_PagerPage.scss
@@ -1,6 +1,6 @@
 
 .pager-summary > ul > li {
-  width:25%;
+  width: 25%;
 
   &.image > img {
     display: block;
@@ -11,49 +11,49 @@
 .losspager {
 
   .disclaimer {
-    display:block;
-    font-size:.8em;
-    margin:0.5em 0;
+    display: block;
+    font-size: 0.8em;
+    margin: 0.5em 0;
   }
 
   table.pager-exposures,
   table.pager-cities {
-    border-spacing: 0;
     border-collapse: collapse;
-    width:100%;
+    border-spacing: 0;
+    width: 100%;
 
     > tbody > tr {
 
       &.city-additional {
-        display:none;
+        display: none;
       }
 
       > td {
 
         .mmi {
-          display:inline-block;
-          width:100%;
-          padding:2px 4px;
-          border-radius:2px;
-          text-align:center;
-          text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
           background-image: linear-gradient(to bottom, rgba(255,255,255,0.15),rgba(255,255,255,0));
+          border-radius: 2px;
+          display: inline-block;
+          padding: 2px 4px;
+          text-align: center;
+          text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+          width: 100%;
         }
 
-        &.exposure-mmi,
-        &.cities-mmi {
-          width:86px;
+        &.cities-mmi,
+        &.exposure-mmi {
+          width: 86px;
         }
 
-        &.exposure-population,
-        &.cities-population, {
-          text-align:right;
+        &.cities-population,
+        &.exposure-population {
+          text-align: right;
         }
       }
     }
 
     &.show-additional > tbody > .city-additional {
-      display:table-row;
+      display: table-row;
     }
   }
 }
@@ -62,7 +62,7 @@
 @media screen and (min-width: 560px) {
 
   .pager-summary > ul > li {
-    width:20%;
+    width: 20%;
   }
 
 }
