Move !important from variables to event header rules

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -84,64 +84,64 @@
 }
 
 .mmiI {
-  background-color: $mmiI;
+  background-color: $mmiI !important;
   box-shadow: 0 0 1px #666;
-  color: $mmiI-text-color;
+  color: $mmiI-text-color !important;
 }
 
 .mmiII{
-  background-color: $mmiII;
-  color: $mmiII-text-color;
+  background-color: $mmiII !important;
+  color: $mmiII-text-color !important;
 }
 
 .mmiIII {
-  background-color: $mmiIII;
-  color: $mmiIII-text-color;
+  background-color: $mmiIII !important;
+  color: $mmiIII-text-color !important;
 }
 
 .mmiIV {
-  background-color: $mmiIV;
-  color: $mmiIV-text-color;
+  background-color: $mmiIV !important;
+  color: $mmiIV-text-color !important;
 }
 
 .mmiV {
-  background-color: $mmiV;
-  color: $mmiV-text-color;
+  background-color: $mmiV !important;
+  color: $mmiV-text-color !important;
 }
 
 .mmiVI {
-  background-color: $mmiVI;
-  color: $mmiVI-text-color;
+  background-color: $mmiVI !important;
+  color: $mmiVI-text-color !important;
 }
 
 .mmiVII {
-  background-color: $mmiVII;
-  color: $mmiVII-text-color;
+  background-color: $mmiVII !important;
+  color: $mmiVII-text-color !important;
 }
 
 .mmiVIII {
-  background-color: $mmiVIII;
-  color: $mmiVIII-text-color;
+  background-color: $mmiVIII !important;
+  color: $mmiVIII-text-color !important;
 }
 
 .mmiIX {
-  background-color: $mmiIX;
-  color: $mmiIX-text-color;
+  background-color: $mmiIX !important;
+  color: $mmiIX-text-color !important;
 }
 
 .mmiX {
-  background-color: $mmiX;
-  color: $mmiX-text-color;
+  background-color: $mmiX !important;
+  color: $mmiX-text-color !important;
 }
 
 .mmiXI {
-  background-color: $mmiXI;
-  color: $mmiXI-text-color;
+  background-color: $mmiXI !important;
+  color: $mmiXI-text-color !important;
 }
 
 .mmiXII {
-  background-color: $mmiXII;
-  color: $mmiXII-text-color;
+  background-color: $mmiXII !important;
+  color: $mmiXII-text-color !important;
 }
 
 /* Width for media query makes the switch from percentages to pixels smooth. */
