--- a/src/htdocs/css/_mmi-variables.scss
+++ b/src/htdocs/css/_mmi-variables.scss
@@ -2,38 +2,38 @@
 
 $mmi-font-family: Tahoma, Verdana, Segoe, sans-serif;
 
-$mmiI: #FFFFFF !important;
-$mmiI-text-color: #000000 !important;
+$mmiI: #FFFFFF;
+$mmiI-text-color: #000000;
 
-$mmiII: #ACD8E9 !important;
-$mmiII-text-color: #000000 !important;
+$mmiII: #ACD8E9;
+$mmiII-text-color: #000000;
 
-$mmiIII: #ACD8E9 !important;
-$mmiIII-text-color: #000000 !important;
+$mmiIII: #ACD8E9;
+$mmiIII-text-color: #000000;
 
-$mmiIV: #83D0DA !important;
-$mmiIV-text-color: #000000 !important;
+$mmiIV: #83D0DA;
+$mmiIV-text-color: #000000;
 
-$mmiV: #7BC87F !important;
-$mmiV-text-color: #000000 !important;
+$mmiV: #7BC87F;
+$mmiV-text-color: #000000;
 
-$mmiVI: #F9F518 !important;
-$mmiVI-text-color: #000000 !important;
+$mmiVI: #F9F518;
+$mmiVI-text-color: #000000;
 
-$mmiVII: #FAC611 !important;
-$mmiVII-text-color: #000000 !important;
+$mmiVII: #FAC611;
+$mmiVII-text-color: #000000;
 
-$mmiVIII: #FA8A11 !important;
-$mmiVIII-text-color: #000000 !important;
+$mmiVIII: #FA8A11;
+$mmiVIII-text-color: #000000;
 
-$mmiIX: #F7100C !important;
-$mmiIX-text-color: #000000 !important;
+$mmiIX: #F7100C;
+$mmiIX-text-color: #000000;
 
-$mmiX: #C80F0A !important;
-$mmiX-text-color: #000000 !important;
+$mmiX: #C80F0A;
+$mmiX-text-color: #000000;
 
-$mmiXI: #C80F0A !important;
-$mmiXI-text-color: #000000 !important;
+$mmiXI: #C80F0A;
+$mmiXI-text-color: #000000;
 
-$mmiXII: #C80F0A !important;
-$mmiXII-text-color: #000000 !important;
+$mmiXII: #C80F0A;
+$mmiXII-text-color: #000000;
