Scope and eliminate redundant css in summary module

--- a/src/htdocs/modules/summary/_DYFIUTMLayer.scss
+++ b/src/htdocs/modules/summary/_DYFIUTMLayer.scss
@@ -1,7 +1,5 @@
 
 .dyfi-popup {
-  color: #444;
-
   > .dyfi-summary {
     display: block;
     list-style: none;
@@ -28,6 +26,6 @@
     clear: left;
     color: #666;
     cursor: help;
-    font-size: .6875em;
+    font-size: 0.6875em;
   }
 }
