Update DYFI Form css/js

--- a/src/htdocs/modules/impact/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/_DYFIFormPage.scss
@@ -1,3 +1,4 @@
+@import 'locationview/_controls.scss';
 @import 'locationview/CoordinateControl.scss';
 @import 'locationview/GeocodeControl.scss';
 @import 'locationview/GeolocationControl.scss';
@@ -6,7 +7,7 @@
 @import 'locationview/LocationView.scss';
 @import 'locationview/PointControl.scss';
 
-@import 'questionview/QuestionView.scss';
+@import 'questionview/_QuestionView.scss';
 
 .dyfiIframe {
   border: 1px solid #ddd;
@@ -15,80 +16,36 @@
   width: 100%;
 }
 
-/* this supports both location view and dyfi-form */
+.dyfi-form > .modal-content {
+  /* relative used by .omb-number */
+  position: relative;
+}
 
-.dyfi-form {
-  .alert {
-    margin: 1em 0 0;
-  }
+.felt-header {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 0.5em;
+}
 
-  .question {
-    .other {
-      margin-left: 2.5em; /* align input box with labels */
-    }
+.omb-number {
+  font-size: .75em;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+}
 
-    ul {
-      margin: 0;
-      padding: 0;
-    }
+.question {
+  > fieldset {
+    margin: 1em 0;
+    padding: 0;
 
-    legend {
+    > legend {
       font-weight: bold;
     }
   }
 }
 
-.dyfi-optional-callout > strong {
-  display: block;
-  margin-bottom: 0.5em;
-}
-
-.dyfi-text-input {
-  margin: 1em 0 0;
-
-  textarea {
-    height: 5em;
-    margin: 0;
-    width: 100%;
-  }
-
-  label {
-    display: block;
-    font-weight: bold;
-  }
-}
-
-.dyfi-contact-questions {
-  label {
-    font-weight: normal;
-  }
-
-  .subheader {
-    font-size: 12px;
-  }
-}
-
-.dyfi-required-questions {
-  margin: 1em 0 0;
-}
-
-.omb-number {
-  font-size: 12px;
-  position: absolute;
-  right: 1.5em;
-  top: 0.5em;
-}
-
-.felt-header {
-  border-bottom: 1px solid #ddd;
-  margin-top: 8px;
-  padding-bottom: 0.5em;
-}
-
 .location-result {
-  display: inline-block;
-  font-size: 0.815em;
-  margin: 1em 0 0;
+  font-size: 0.8em;
 
   > .address {
     display: block;
@@ -97,74 +54,33 @@
 }
 
 .location-button {
+  margin: 1em 0;
+}
+
+.dyfi-optional-callout > strong {
   display: block;
-  margin: 1em 0 0;
+  margin-bottom: 0.5em;
 }
 
-
-/** Location View **/
-
-.locationview-button {
-  font-size: 15px;
-  padding: 0 1em;
-
-  &:hover {
-    color: #fff;
-    text-shadow: 0 0 1px rgba(0,0,0,0.6);
-  }
-}
-
-.leaflet-control-input > button {
-  font-size: 1em;
-  line-height: 3rem;
-}
-
-.information-list-mask > .information-list > li {
-  padding: 5px 0;
-
-  > .icon {
-    display: inline-block;
-    height: 40px;
-    line-height: 50px;
-    position: relative;
-    vertical-align: middle;
-    width: 40px;
+.dyfi-text-input {
+  > label {
+    display: block;
+    font-weight: bold;
   }
 
-  > p {
-    display: inline-block;
-    font-size: 12px;
-    line-height: 1em;
+  > textarea {
+    height: 5em;
     margin: 0;
-    padding: 0;
-    vertical-align: middle;
-    width: 70%;
+    width: 100%;
   }
 }
 
-
-@media screen and (min-width: 560px) {
-  .information-list-mask > .information-list > li {
-    padding: 5px 0 0 0;
-    top: 0;
-
-    > span.icon {
-      top: 0;
-    }
-  }
-}
-
-
-@media screen and (min-width: 768px) {
-  .dyfi-form {
-    .question .other {
-      margin-left: 3em;
-    }
+.dyfi-contact-questions {
+  > legend {
+    font-weight: bold;
   }
 
-  .locationview-button {
-    font-size: 12px;
-    height: 3rem;
-    line-height: 3rem;
+  > .dyfi-text-input > label {
+    font-weight: normal;
   }
 }
