--- a/src/htdocs/modules/impact/_PagerPage.scss
+++ b/src/htdocs/modules/impact/_PagerPage.scss
@@ -2,67 +2,62 @@
 .pager-summary > ul > li {
   width: 25%;
 
+  @media screen and (min-width: 560px) {
+    width: 20%;
+  }
+
   &.image > img {
     display: block;
     margin: auto;
   }
 }
 
-.losspager {
 
-  .disclaimer {
-    display: block;
-    font-size: 0.8em;
-    margin: 0.5em 0;
+.alert-wrapper > .column {
+  > h3 {
+    margin-bottom: 0;
   }
 
-  table.pager-exposures,
-  table.pager-cities {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-
-    > tbody > tr {
-
-      &.city-additional {
-        display: none;
-      }
-
-      > td {
-
-        .mmi {
-          background-image: linear-gradient(to bottom, rgba(255,255,255,0.15),rgba(255,255,255,0));
-          border-radius: 2px;
-          display: inline-block;
-          padding: 2px 4px;
-          text-align: center;
-          text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-          width: 100%;
-        }
-
-        &.cities-mmi,
-        &.exposure-mmi {
-          width: 86px;
-        }
-
-        &.cities-population,
-        &.exposure-population {
-          text-align: right;
-        }
-      }
-    }
-
-    &.show-additional > tbody > .city-additional {
-      display: table-row;
-    }
+  > figure {
+    margin-top: 0;
   }
 }
 
+.pager-cities,
+.pager-exposures {
+  width: 100%;
+}
 
-@media screen and (min-width: 560px) {
+.cities-mmi,
+.exposure-mmi {
+  width: 86px;
 
-  .pager-summary > ul > li {
-    width: 20%;
+  > .mmi {
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0.15),rgba(255,255,255,0));
+    border-radius: 2px;
+    display: inline-block;
+    padding: 2px 4px;
+    text-align: center;
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+    width: 100%;
   }
+}
 
+.cities-population,
+.exposure-population {
+  text-align: right;
+}
+
+.city-additional {
+  display: none;
+
+  .show-additional > tbody > & {
+    display: table-row;
+  }
+}
+
+.pager-disclaimer {
+  display: block;
+  font-size: 0.8em;
+  margin: 0.5em 0;
 }
