--- a/src/htdocs/modules/impact/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/_ShakeMapPage.scss
@@ -6,17 +6,17 @@
   }
 }
 
-.shakemap-tablist > section {
-  padding-top: 1em;
-}
-
 .shakemap-stations {
   > .accordion {
     margin: 0;
 
     + .accordion {
-      margin-top: 1em;
+      border-top: 1px solid #ddd;
     }
+  }
+
+  &:last-child {
+    padding-bottom: 1em;
   }
 }
 
@@ -39,15 +39,14 @@
   margin-top: 0;
 }
 
-@media screen and (min-width: 560px) {
-  .station-metadata.horizontal {
-    > dt {
-      margin: 0;
-      width: 6em;
-    }
+.station-metadata  {
+  font-size: 0.88em;
 
-    > dd {
-      margin-left: 7em;
-    }
+  > dt {
+    margin: 0.5em 0 0;
+  }
+
+  > dd {
+    margin: 0;
   }
 }
