Changed abbr for characteristic item for each summary.

--- a/src/htdocs/modules/base/_ProductSummarizer.scss
+++ b/src/htdocs/modules/base/_ProductSummarizer.scss
@@ -34,6 +34,8 @@
       width: 25%;
 
       &.image > img {
+        display: block;
+        margin: 0 auto;
         padding: 0 0.5em;
         width: 4em;
       }
